# GVFinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  parse_all_samples.py  run_all_samples.py  run_and_parse_all.py  time_memory.py
data/: alela_jelen.fasta  alela_jelen_modified.fasta
src/: CMakeLists.txt  GVFinder.cpp  GVFinder.hpp  main.cpp
tests/: CMakeLists.txt  test_1.cpp  test_big_punishment.cpp  test_closest_clusters.cpp  test_helper.cpp  test_helper.hpp  test_rough_method.cpp  utilities.hpp
